--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "multer": "^2.0.1",
     "nanoid": "^5.1.5",
     "next": "14.1.0",
+    "next-auth": "^4.24.11",
     "nodemailer": "^7.0.3",
     "prisma": "^6.9.0",
     "react": "^18",
