--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "@types/multer": "^1.4.13",
     "@types/nodemailer": "^6.4.17",
     "@types/uuid": "^10.0.0",
+    "agora-access-token": "^2.0.4",
+    "agora-rtc-react": "^2.4.0",
+    "agora-rtc-sdk-ng": "^4.23.4",
     "bcryptjs": "^3.0.2",
     "cloudinary": "^2.6.1",
     "cookies-next": "^4.1.1",
